[project]
name = "job-search"
version = "0.1.0"
description = "Scrape, triage, and LLM-rank remote job postings"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Rich Churcher" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.1.3",
    "pandas>=2.3.3",
    "python-jobspy>=1.1.82",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
